Fix uneven padding between sections

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,16 @@ body {
     height: 100vh;
 }
 
+.hero,
+.information,
+.quote,
+.action {
+    padding-top: 50px;
+    padding-bottom: 50px;
+    min-height: 400px;
+}
+
+
 .header,
 .footer,
 .hero {
@@ -37,10 +47,11 @@ body {
 
 
 .hero {
-    justify-content: center;
+    /* height: 620px; */
+    /* padding-top: 50px;
+    padding-bottom: 50px; */
     align-items: center;
     gap: 5%;
-    height: 450px;
 }
 .hero-text {
     display: flex;
@@ -76,7 +87,7 @@ button {
 
 .action {
     display: flex;
-    min-height: 450px;
+    /* min-height: 450px; */
     justify-content: center;
     align-items: center;
     flex-grow: 1;
@@ -103,10 +114,8 @@ button {
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: space-evenly;
-    height: 500px;
+    justify-content: center;
     gap: 30px;
-    padding-bottom: 50px;
 }
 .information-header-text {
     font-size: 36px;
@@ -132,13 +141,15 @@ button {
 
 
 .quote {
+    display: flex;
+    align-items: center;
     background-color: #E5E7EB;
 }
 .quote-box {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    height: 500px;
+    align-items: center;
     margin-left: 25%;
     margin-right: 25%;
 }
